--- a/SystemModerator.csproj
+++ b/SystemModerator.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,6 +72,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\TreeItems.cs" />
     <Compile Include="Forms\ComputerManager.xaml.cs">
       <DependentUpon>ComputerManager.xaml</DependentUpon>
     </Compile>
@@ -101,6 +103,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <EmbeddedResource Include="Resources\Scripts\Main.ps1" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
