--- a/SystemModerator.csproj
+++ b/SystemModerator.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.3.4" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Management.Automation" Version="7.3.4" />
   </ItemGroup>
 </Project>
