--- a/SystemModerator.csproj
+++ b/SystemModerator.csproj
@@ -12,6 +12,13 @@
     <NeutralLanguage>en-001</NeutralLanguage>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/olip-03/SystemModerator</RepositoryUrl>
+    <StartupObject>SystemModerator.App</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>5</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="activity.png" />
